// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValuesOverrideFilesSetting should match snapshot with GIT_REPOSITORY type 1`] = `
<body>
  <div>
    <section
      class="flex flex-col"
    >
      <h1
        class="text-neutral-400 text-xl font-bold mb-2"
      >
        Values override as file
      </h1>
      <form
        class="space-y-10"
      >
        <div>
          <p
            class="text-sm text-neutral-350"
          >
            Define the YAML file(s) to be applied as override to the default values.yaml delivered with the chart. It is highly recommended to store the override file(s) in a git repository.
          </p>
          <span
            aria-controls="radix-:rk:"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="cursor-pointer text-sm font-medium text-brand-500 transition hover:text-brand-600"
            data-state="closed"
            type="button"
          >
            How it works 
            <i
              aria-hidden="true"
              class="fa-regular fa-circle-question text-xs"
            />
          </span>
        </div>
        <div
          class="flex flex-col gap-4"
        >
          <div
            class=""
          >
            <div
              class="input input--select    "
              data-testid="select"
            >
              <label
                class="!translate-y-0 !text-xs"
                for="File source"
              >
                File source
              </label>
              <div
                class=" css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-4-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class="input-select__control css-13cymwt-control"
                >
                  <div
                    class="input-select__value-container input-select__value-container--has-value css-1fdsijx-ValueContainer"
                  >
                    <span
                      class="mr-1 text-sm text-neutral-400"
                    >
                      Git repository
                    </span>
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-haspopup="true"
                      aria-readonly="true"
                      class="css-mohuvp-dummyInput-DummyInput"
                      id="File source"
                      inputmode="none"
                      role="combobox"
                      tabindex="0"
                      value=""
                    />
                  </div>
                  <div
                    class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="File source"
                  type="hidden"
                  value="GIT_REPOSITORY"
                />
              </div>
              <input
                name="File source"
                type="hidden"
                value="GIT_REPOSITORY"
              />
              <div
                class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
              >
                <span
                  class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                  role="img"
                />
              </div>
            </div>
          </div>
        </div>
        <section
          class="flex flex-col"
        >
          <h2
            class="text-neutral-400 text-base font-bold mb-2"
          >
            Override from repository
          </h2>
          <p
            class="mb-6 text-sm text-neutral-350"
          >
            Specify the repository and the path containing the override yaml file to be passed via the “-f” helm argument. More than one file can be used as override by adding them in the path field separated by a semi-colon. If you don’t have a repository, you can set the override manually or via a raw YAML file.
          </p>
          <div
            class="flex flex-col gap-3"
          >
            <div>
              git repository dom
            </div>
          </div>
        </section>
      </form>
    </section>
  </div>
</body>
`;

exports[`ValuesOverrideFilesSetting should match snapshot with NONE type 1`] = `
<body>
  <div>
    <section
      class="flex flex-col"
    >
      <h1
        class="text-neutral-400 text-xl font-bold mb-2"
      >
        Values override as file
      </h1>
      <form
        class="space-y-10"
      >
        <div>
          <p
            class="text-sm text-neutral-350"
          >
            Define the YAML file(s) to be applied as override to the default values.yaml delivered with the chart. It is highly recommended to store the override file(s) in a git repository.
          </p>
          <span
            aria-controls="radix-:r6:"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="cursor-pointer text-sm font-medium text-brand-500 transition hover:text-brand-600"
            data-state="closed"
            type="button"
          >
            How it works 
            <i
              aria-hidden="true"
              class="fa-regular fa-circle-question text-xs"
            />
          </span>
        </div>
        <div
          class="flex flex-col gap-4"
        >
          <div
            class=""
          >
            <div
              class="input input--select    "
              data-testid="select"
            >
              <label
                class="!translate-y-0 !text-xs"
                for="File source"
              >
                File source
              </label>
              <div
                class=" css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-2-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class="input-select__control css-13cymwt-control"
                >
                  <div
                    class="input-select__value-container input-select__value-container--has-value css-1fdsijx-ValueContainer"
                  >
                    <span
                      class="mr-1 text-sm text-neutral-400"
                    >
                      Git repository
                    </span>
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-haspopup="true"
                      aria-readonly="true"
                      class="css-mohuvp-dummyInput-DummyInput"
                      id="File source"
                      inputmode="none"
                      role="combobox"
                      tabindex="0"
                      value=""
                    />
                  </div>
                  <div
                    class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="File source"
                  type="hidden"
                  value="GIT_REPOSITORY"
                />
              </div>
              <input
                name="File source"
                type="hidden"
                value="GIT_REPOSITORY"
              />
              <div
                class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
              >
                <span
                  class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                  role="img"
                />
              </div>
            </div>
          </div>
        </div>
      </form>
    </section>
  </div>
</body>
`;

exports[`ValuesOverrideFilesSetting should match snapshot with YAML type 1`] = `
<body>
  <div>
    <section
      class="flex flex-col"
    >
      <h1
        class="text-neutral-400 text-xl font-bold mb-2"
      >
        Values override as file
      </h1>
      <form
        class="space-y-10"
      >
        <div>
          <p
            class="text-sm text-neutral-350"
          >
            Define the YAML file(s) to be applied as override to the default values.yaml delivered with the chart. It is highly recommended to store the override file(s) in a git repository.
          </p>
          <span
            aria-controls="radix-:rd:"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="cursor-pointer text-sm font-medium text-brand-500 transition hover:text-brand-600"
            data-state="closed"
            type="button"
          >
            How it works 
            <i
              aria-hidden="true"
              class="fa-regular fa-circle-question text-xs"
            />
          </span>
        </div>
        <div
          class="flex flex-col gap-4"
        >
          <div
            class=""
          >
            <div
              class="input input--select    "
              data-testid="select"
            >
              <label
                class="!translate-y-0 !text-xs"
                for="File source"
              >
                File source
              </label>
              <div
                class=" css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-3-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class="input-select__control css-13cymwt-control"
                >
                  <div
                    class="input-select__value-container input-select__value-container--has-value css-1fdsijx-ValueContainer"
                  >
                    <span
                      class="mr-1 text-sm text-neutral-400"
                    >
                      Git repository
                    </span>
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-haspopup="true"
                      aria-readonly="true"
                      class="css-mohuvp-dummyInput-DummyInput"
                      id="File source"
                      inputmode="none"
                      role="combobox"
                      tabindex="0"
                      value=""
                    />
                  </div>
                  <div
                    class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="File source"
                  type="hidden"
                  value="GIT_REPOSITORY"
                />
              </div>
              <input
                name="File source"
                type="hidden"
                value="GIT_REPOSITORY"
              />
              <div
                class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
              >
                <span
                  class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                  role="img"
                />
              </div>
            </div>
          </div>
        </div>
        <section
          class="flex flex-col"
        >
          <h2
            class="text-neutral-400 text-base font-bold mb-2"
          >
            Override with raw Yaml
          </h2>
          <p
            class="mb-6 text-sm text-neutral-350"
          >
            You can define here the YAML containing the overrides you want to apply. The YAML will be stored by Qovery and can be updated later within the settings but no history will be retained.
          </p>
          <div
            class="flex flex-col gap-3"
          >
            <div
              class="mb-5 rounded border border-neutral-250 bg-neutral-100 w-full"
              data-testid="block-content"
            >
              <div
                class="flex h-9 items-center justify-between border-b border-neutral-250 px-4"
              >
                <h2
                  class="text-ssm font-medium text-neutral-400"
                >
                  Raw YAML
                </h2>
              </div>
              <div
                class="p-0"
              >
                <div
                  class="my-4 px-10 py-5 text-center"
                >
                  <i
                    aria-hidden="true"
                    class="fa-solid fa-wave-pulse text-neutral-350"
                  />
                  <p
                    class="mb-3 mt-1 text-xs font-medium text-neutral-350"
                  >
                    No override defined.
                  </p>
                  <button
                    class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-sm h-9 px-3 rounded bg-brand-500 active:bg-brand-600 hover:bg-brand-400 text-white disabled:text-brand-300 disabled:bg-brand-100"
                    type="button"
                  >
                    Create override 
                    <i
                      aria-hidden="true"
                      class="fa-solid fa-pen ml-2"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </section>
      </form>
    </section>
  </div>
</body>
`;
